force-app/main/default/objects/Timesheet_Entry__c/Timesheet_Entry__c.object-meta.xml
<CustomObject>
    <description>Child object of Time Utilisation object to manage daily timesheeet entry.</description>
    <label>Timesheet Entry</label>
    <nameField>
        <displayFormat>TE-{00000}</displayFormat>
        <label>Timesheet Entries</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>