force-app/main/default/objects/Timesheet_Entry__c/fields/Extra_Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Extra_Work_Hours__c</fullName>
    <inlineHelpText>Extra work time spent during the day</inlineHelpText>
    <label>Extra Work Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>