force-app/main/default/objects/Timesheet_Entry__c/fields/Lunch_Time_Mins__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Time_Mins__c</fullName>
    <defaultValue>45</defaultValue>
    <label>Lunch Time(Mins)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>