force-app/main/default/objects/Timesheet_Entry__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <defaultValue>&quot;08:55&quot;</defaultValue>
    <inlineHelpText>24 hours format please use HH:MI.</inlineHelpText>
    <label>Start Time</label>
    <length>6</length>
    <type>Text</type>
</CustomField>