force-app/main/default/objects/Timesheet_Entry__c/fields/Time_Utilisation__c.field-meta.xml
<CustomField>
    <fullName>Time_Utilisation__c</fullName>
    <label>Time Utilisation</label>
    <referenceTo>Time_Utilisation__c</referenceTo>
    <relationshipLabel>Timesheet Entries</relationshipLabel>
    <relationshipName>Timesheet_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>